Fixed navlinks alignment

--- a/public/style.css
+++ b/public/style.css
@@ -32,6 +32,10 @@ input {
     .pc {
         display: none;
     }
+
+    .nav-link {
+        margin-top: .2rem;
+    }
 }
 
 @media(min-width: 768px) {
